sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: illegal start of simple expression
  while (!e=) {e=false;
            ^AlgCombSort:18: error: ')' expected but '}' found.
              }} 
               ^